Fix : Align navbar search box with 100% width (#2280)

--- a/docusaurus/src/scss/custom-search-bar.scss
+++ b/docusaurus/src/scss/custom-search-bar.scss
@@ -43,6 +43,7 @@
   }
 
   .kapa-widget-button {
+    width: 100%;
     appearance: none;
     background: none;
     border: none;
@@ -133,7 +134,6 @@
         top: 0;
       }
     }
-
   }
 }
 
